--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-picker-select": "^9.3.1",
